@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.adam.aslfms" android:versionCode="4" android:versionName="1.0.2">
 
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+	<application android:icon="@drawable/icon" android:label="@string/app_name"
+		android:debuggable="true">
 		<activity android:name="com.adam.aslfms.SettingsActivity"
 			android:label="@string/app_name" android:icon="@drawable/icon">
 			<intent-filter>
@@ -37,12 +38,6 @@
 			</intent-filter>
 		</receiver>
 
-		<receiver android:name="com.adam.aslfms.TestReceiver"
-			android:exported="true" android:enabled="true">
-			<intent-filter>
-				<action android:name="com.tunewiki.lyricplayer.android.radio.shoutcast" />
-			</intent-filter>
-		</receiver>
 	</application>
 
 	<uses-sdk android:minSdkVersion="3" />
