@@ -1,41 +1,0 @@
-/**
- *  This file is part of A Simple Last.fm Scrobbler.
- *
- *  A Simple Last.fm Scrobbler is free software: you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation, either version 3 of the License, or
- *  (at your option) any later version.
- *
- *  A Simple Last.fm Scrobbler is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with A Simple Last.fm Scrobbler.  If not, see <http://www.gnu.org/licenses/>.
- *  
- *  See http://code.google.com/p/a-simple-lastfm-scrobbler/ for the latest version.
- */
-
-package com.adam.aslfms;
-
-import android.content.BroadcastReceiver;
-import android.content.Context;
-import android.content.Intent;
-import android.os.Bundle;
-import android.util.Log;
-
-public class TestReceiver extends BroadcastReceiver {
-	
-	private static final String TAG = "TestReceiver";
-
-	@Override
-	public void onReceive(Context context, Intent intent) {
-		String action = intent.getAction();
-		Bundle bundle = intent.getExtras();
-		
-		Log.d(TAG, "action: " + action);
-		Log.d(TAG, "bundle: " + bundle.describeContents());
-	}
-
-}
